--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ h2 {
 #projects{
     margin: 0;
     margin-top: 50px;
+    font-style: normal;
 }
 
 h3 {
@@ -113,6 +114,13 @@ h4 {
     padding: 5px;
     letter-spacing: 2px;
     color: #5c3c54;
+    font-style: normal;
+}
+
+h5 {
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
 }
 
 .card_img_container {
@@ -155,6 +163,7 @@ em {
 }
 
 .btn {
+    font-style: normal;
     display: inline-block;
     background-color: rgb(208, 160, 215);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
@@ -180,6 +189,7 @@ em {
 #about {
     margin: 0;
     margin-top: 100px;
+    font-style: normal;
 }
 
 #art_about {
@@ -235,6 +245,7 @@ em {
 
 #contact {
     margin-top: 100px;
+    font-style: normal;
 }
 
 form {
